--- a/.github/workflows/job.yaml
+++ b/.github/workflows/job.yaml
@@ -5,4 +5,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - run: docker exec desafio05-github-ci yarn test
+            - run: yarn test
